[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "internal-services"
version = "0.1.1"
description = "Shared async HTTP clients for the CO330 microservices stack."
authors = [{name = "CO3302Group3"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27,<1.0",
]

[project.urls]
Homepage = "https://github.com/CO3302Group3/internal-services"
Repository = "https://github.com/CO3302Group3/internal-services"

[tool.setuptools.packages.find]
where = ["."]
include = ["internal_services"]
